syntax = "proto3";
option java_multiple_files = true;
package com.orness.gandalf.core.connectorbusservice.grpc;

//Default
message DefaultRequest {
    string message = 1;
}

message DefaultResponse {
    string message = 1;
}

//Message
message Message {
    string topic = 1;
    string sender = 2;
    string creation_date = 3;
    string expiration_time = 4;
    string content = 5;
}

message MessageRequest {
    Message message = 1;
}

message MessageResponse {
    Message message = 1;
}

message GetMessage {
    string topic = 1;
    string subscriber = 2;
}

message GetMessageRequest {
    GetMessage message = 1;
}

//Topic
message Topic {
    string name = 1;
    string numPartitions = 2;
    string replicationFactor = 3;
}

message TopicRequest {
    Topic topic = 1;
}

//Subscribe
message Subscribe {
    string topic = 1;
    string subscriber = 2;
}

message SubscribeRequest {
    Subscribe subscribe = 1;
}

//RPC Functions
service ConnectorBusService {
    rpc sendMessage(MessageRequest) returns (DefaultResponse);

    rpc sendMessageStream(MessageRequest) returns (stream MessageResponse);

    rpc createTopic(TopicRequest) returns (DefaultResponse);

    rpc deleteTopic(TopicRequest) returns (DefaultResponse);

    rpc subscribeTopic(SubscribeRequest) returns (DefaultResponse);

    rpc unsubscribeTopic(SubscribeRequest) returns (DefaultResponse);

    rpc getMessage(GetMessageRequest) returns (MessageResponse);

    rpc getMessageStream(GetMessageRequest) returns (stream MessageResponse);

}

